--- a/app/src/main/res/layout/list_test.xml
+++ b/app/src/main/res/layout/list_test.xml
@@ -27,8 +27,8 @@
 
     <ImageView
         android:id="@+id/iv_img"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="117dp"
+        android:layout_height="104dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:layout_marginBottom="32dp"
